feat: added implementation for builtin engine and metrics

--- a/package.json
+++ b/package.json
@@ -10,5 +10,11 @@
   "scripts": {
     "build": "tsc",
     "install": "tsc"
+  },
+  "dependencies": {
+    "lodash": "^4.17.20"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.161"
   }
 }
