--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
     "install": "tsc"
   },
   "dependencies": {
-    "lodash": "^4.17.20"
+    "@types/fs-extra": "^9.0.1",
+    "@types/node": "^14.11.2",
+    "fs": "^0.0.1-security",
+    "fs-extra": "^9.0.1",
+    "lodash": "^4.17.20",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.161"
