--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@types/fs-extra": "^9.0.1",
     "@types/node": "^14.11.2",
+    "chalk": "^4.1.0",
     "fs": "^0.0.1-security",
     "fs-extra": "^9.0.1",
     "lodash": "^4.17.20",
