rm oos as a problem type

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "types": "./src/bitfan.d.ts",
   "scripts": {
     "build": "tsc",
-    "test": "jest"
+    "test": "jest ./out"
   },
   "dependencies": {
     "axios": "^0.20.0",
