--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "types": "./src/bitfan.d.ts",
   "scripts": {
     "build": "tsc",
-    "test": "jest ./out"
+    "test": "jest"
   },
   "dependencies": {
     "axios": "^0.20.0",
@@ -20,13 +20,19 @@
     "progress": "^2.0.3"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/fs-extra": "^9.0.1",
     "@types/jest": "^26.0.14",
     "@types/lodash": "^4.14.161",
     "@types/node": "^14.11.2",
-    "@types/axios": "^0.14.0",
     "@types/progress": "^2.0.3",
-    "jest": "^26.4.2",
-    "ts-jest": "^24.3.0"
+    "jest": "^24.0.0",
+    "ts-jest": "^24.3.0",
+    "@babel/core": "^7.11.6",
+    "@babel/plugin-proposal-optional-chaining": "^7.11.0",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-typescript": "^7.10.4",
+    "babel-jest": "^24.0.0",
+    "typescript": "~4.0.0"
   }
 }
