--- a/package.json
+++ b/package.json
@@ -17,22 +17,24 @@
     "fs": "^0.0.1-security",
     "lodash": "^4.17.20",
     "path": "^0.12.7",
-    "progress": "^2.0.3"
+    "progress": "^2.0.3",
+    "seedrandom": "^3.0.5"
   },
   "devDependencies": {
+    "@babel/core": "^7.11.6",
+    "@babel/plugin-proposal-optional-chaining": "^7.11.0",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-typescript": "^7.10.4",
     "@types/axios": "^0.14.0",
     "@types/fs-extra": "^9.0.1",
     "@types/jest": "^26.0.14",
     "@types/lodash": "^4.14.161",
     "@types/node": "^14.11.2",
     "@types/progress": "^2.0.3",
+    "@types/seedrandom": "^2.4.28",
+    "babel-jest": "^24.0.0",
     "jest": "^24.0.0",
     "ts-jest": "^24.3.0",
-    "@babel/core": "^7.11.6",
-    "@babel/plugin-proposal-optional-chaining": "^7.11.0",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-typescript": "^7.10.4",
-    "babel-jest": "^24.0.0",
     "typescript": "~4.0.0"
   }
 }
