--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "bitfan",
+  "name": "@botpress/bitfan",
   "version": "0.0.1",
   "private": true,
   "description": "Botpress Internal Testing Framework for Algorithms of NLU",
   "main": "out/index.js",
   "author": "<francois.levasseur@botpress.com>",
   "license": "MIT",
+  "repository": "git://github.com/botpress/bitfan.git",
   "types": "./src/bitfan.d.ts",
   "scripts": {
     "build": "tsc",
